@@ -22,4 +22,12 @@ class ConsumerStartTest {
     void startSerializationWithKryo() {
         new ConsumerStart("application-kryo-context.xml").start();
     }
+
+    /**
+     * 使用应该增加 vm 参数 (-ea --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.text=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.math=ALL-UNNAMED --add-opens java.base/java.util.concurrent=ALL-UNNAMED --add-opens java.base/java.net=ALL-UNNAMED)
+     */
+    @Test
+    void startSerializationWithFst() {
+        new ConsumerStart("application-fst-context.xml").start();
+    }
 }
